# QuakeStrainer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  release-cpp-library.yml
cmake/: CMake-Clean-VS2022-x64.bat  CMake-VS2022-x64.bat  CMakeShared.cmake
src/: main.cpp  quakePatchingApi.cpp  quakePatchingApi.h  smartProcessHandle.cpp  smartProcessHandle.h  utils.cpp  utils.h
